reimplement shared formula import for xlsb, fdo#86734

Change-Id: Ic5d678a2b1197ce8d83b308b0a4387bf657052d5